// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render a close X button in modal mode 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={true}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders a Dialog with disabled buttons 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={true}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
          <button
            className="headerButton"
            disabled={true}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={true}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={true}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders a Dialog with no buttons 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders a basic Dialog 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`renders a dialog with only the confirm button disabled 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={true}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`should render children even if dialog is hidden and if shouldUnmountOnHide is false 1`] = `
<portal-mock>
  <aside
    className="root"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Dialog Title
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          >
            <div>
              Dialog Contents
            </div>
          </div>
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;

exports[`should unmount children if dialog is hidden and if shouldUnmountOnHide is true 1`] = `
<portal-mock>
  <aside
    className="root"
  />
</portal-mock>
`;

exports[`supports modifying title and button texts 1`] = `
<portal-mock>
  <aside
    className="root_open"
  >
    <form
      className="form"
      onKeyDown={[Function]}
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <button
        className="mask"
        disabled={false}
        type="reset"
      />
      <div
        className="dialog"
      >
        <div
          className="header"
        >
          <span
            className="headerText"
          >
            Unit Test Title
          </span>
          <button
            className="headerButton"
            disabled={false}
            type="reset"
          >
            <span
              className="root"
            >
              <svg
                className="icon"
                fill="none"
                height={24}
                stroke="currentColor"
                strokeLinecap="round"
                strokeLinejoin="round"
                strokeWidth="2"
                viewBox="0 0 24 24"
                width={24}
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          className="body"
        >
          <div
            className="contents"
          />
          <div
            className="buttons"
          >
            <button
              className="root_lowPriority"
              disabled={false}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="reset"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Unit Test Cancel"
                  id="global.cancelButton"
                />
              </span>
            </button>
            <button
              className="root_highPriority"
              disabled={false}
              onClick={[Function]}
              onDragStart={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchCancel={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              type="submit"
            >
              <span
                className="content"
              >
                <mock-FormattedMessage
                  defaultMessage="Unit Test Confirm"
                  id="global.confirmButton"
                />
              </span>
            </button>
          </div>
        </div>
      </div>
    </form>
  </aside>
</portal-mock>
`;
